--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -19,12 +19,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <!--<Button
-        android:id="@+id/scan_btn"
-        android:text="扫描二维码"
+    <Button
+        android:id="@+id/create_btn"
+        android:text="生成二维码"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />-->
+        android:layout_height="wrap_content" />
 
+    <ImageView
+        android:layout_gravity="center"
+        android:id="@+id/img_qr"
+        android:src="@drawable/ic_launcher_background"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
